[package]
name = "redcon"
version = "0.1.0"
authors = ["unexge <unexge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-recursion = "0.3"